Add multilingual UX, bot detection demo, and SaaS UI refresh

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,6 @@
 GNEWS_API_KEY=your_gnews_api_key_here
+MONGO_URI=mongodb://127.0.0.1:27017
+MONGODB_URI=mongodb://127.0.0.1:27017
+MONGODB_DB=disinfo_intel
+SARVAM_API_KEY=your_sarvam_api_key_here
+SARVAM_TRANSLATE_URL=https://api.sarvam.ai/translate
